--- a/index.html
+++ b/index.html
@@ -1,21 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Arduino Bluetooth Output</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+    }
+
+    .header{
+      background-color: #6666;
+      color:#003874 ;
+      margin: 0%;
+      justify-content: center;
+      text-align: center;
+      padding: 20px;
+    }
+    .logo{
+      width: 50px;
+      height: 50px;
+    }
+    .container {
+      width: 80%;
+      margin: 1px auto 1px 20px;
+    }
+
+    .navbar {
+      background-color: #003874;
+      color: #fff;
+      padding: 20px 0;
+    }
+
+    .navbar h1.logo {
+      margin: 0;
+    }
+
+    .nav-links {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      display: flex;
+    }
+
+    .nav-links li {
+      margin-right: 20px;
+    }
+
+    .nav-links li:last-child {
+      margin-right: 0;
+    }
+
+    .nav-links li a {
+      color: #fff;
+      text-decoration: none;
+    }
+
+    .burger {
+      display: none;
+      cursor: pointer;
+    }
+
+    .line1,
+    .line2,
+    .line3 {
+      width: 25px;
+      height: 3px;
+      background-color: #fff;
+      margin: 5px;
+    }
+
+    @media screen and (max-width: 768px) {
+      .nav-links {
+        display: none;
+        flex-direction: column;
+      }
+
+      .nav-links.active {
+        display: flex;
+      }
+
+      .burger {
+        display: block;
+      }
+    }
+  </style>
 </head>
+
 <body>
-  <h1>Street Light Project</h1>
+<!--Header-->
+<div class="header">
+  <img class="logo" src="Assets/Logo.png"/>
+<h1>TamilNadu Street Light Centralized Management</h1>
+</div>
+  <!---Navigation Bar-->
+  <nav class="navbar">
+    <div class="container">   
+      <ul class="nav-links">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+      <div class="burger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+      </div>
+    </div>
+  </nav>
+
+  <!---Home page Background Picture and other items-->
+
   <div id="output"></div>
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
 
-    socket.on('arduinoData', function(data) {
+    socket.on('arduinoData', function (data) {
       document.getElementById('output').innerText = data;
+    });
+    const burger = document.querySelector('.burger');
+    const navLinks = document.querySelector('.nav-links');
+
+    burger.addEventListener('click', () => {
+      navLinks.classList.toggle('active');
     });
   </script>
 </body>
+
 </html>
